--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,97 @@
-/* developer styles go here */
+
+/****************************Add this to my reset************************/
+.sr-only {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    }
+
+    :root{
+        --cream: #e5e1db;
+        --yellow: #cfb450;
+        --grey: #6b6267;
+        --lg-grey: #d2cfd1;
+    }
+
+    body{
+        font-family: sans-serif;
+    }
+
+    .inner-container{
+        padding: 0 1rem;
+        max-width: 60rem;
+        margin: 0 auto;
+    }
+
+    header{
+        background-color: var(--cream);
+        margin-bottom: 3rem;
+    }
+
+    header > .inner-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    input[id=search] {
+        padding: 0.5rem;
+        padding-left: 2.2rem;
+        border-radius: 5px;
+        border: 1px solid var(--lg-grey);
+        background-image: url(../img/magnifying-glass.svg);
+        background-size: 1.5rem 1.5rem;
+        background-repeat: no-repeat;
+        background-position: center left 8px;
+    }
+
+    form[name=login]{
+        border: 1px solid var(--lg-grey);
+        box-shadow: 3px 3px 5px var(--lg-grey);
+        padding: 1.5rem;
+        border-radius: 5px;
+    }
+
+    label{
+        display: block;
+    }
+
+    form > div{
+        margin-bottom: 1rem;
+    }
+
+    input[id=email],
+    input[id=pw]{
+        padding: 0 0.5rem;
+        line-height: 1.875rem;
+        width: 14.375rem;
+        border: none;
+        border-bottom: 1px solid var(--lg-grey);
+    }
+
+    input[type=submit]{
+        background-color: var(--yellow);
+        padding: 0.25rem 0.5rem;
+        border: 2px solid var(--yellow);
+        border-radius: 5px;
+    }
+
+    input[type=submit]:hover{
+        background-color: white;
+        border: 2px solid var(--yellow);
+        color: var(--grey);
+        cursor: pointer;
+    }
+
+    input[id=email]:invalid,
+    input[id=pw]:invalid{
+        outline: 2px solid tomato;
+    }
+
+    input[id=email]:valid,
+    input[id=pw]:valid{
+        outline: 2px solid green;
+    }
